navbar layout issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html::-webkit-scrollbar {
   }
 
   body {
-    @apply text-black antialiased font-outfit p-0 m-0 border ;
+    @apply text-black antialiased font-outfit p-0 m-0;
   }
 
   button {
